--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+.bg {
   margin: 0;
-  padding: 0;
-  font-family: 'Times New Roman', Times, serif;
+  padding: 0; 
+  font-family: "Open Sans", sans-serif;
   background-color: #1e1e2f;
   height: 100vh;
   display: flex;
@@ -34,7 +35,7 @@ body {
   outline: none;
   background: transparent;
   color: white;
-  font-size: 15px;
+  font-size: 17px;
   flex: 1;
   padding-left: 10px;
 }
@@ -54,12 +55,12 @@ body {
 }
 
 .search i {
-  font-size: 1.2rem;
+  font-size: 20px;
 }
 
 .temp {
   font-size: 60px;
-  font-weight: 900;
+  font-weight: 600;
   color: #2d2d2d;
   margin: 10px 0;
 }
